--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:skHSauxEX7kh7U0L5J8zTiKikXQ49c779+KbQZZRAy8=
 APP_DEBUG=true
 APP_URL=http://localhost
 
