--- a/.github/workflows/laravel9.yml
+++ b/.github/workflows/laravel9.yml
@@ -11,7 +11,7 @@ jobs:
   build:
   
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu
 
     steps:
       - name: Checkout 
@@ -34,4 +34,4 @@ jobs:
           file: ./Dockerfile
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/laravelprove
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/laravelprovesecond
